fix: 🐛 Properly reverted all changes to image alignment by removing classes altogether
Why: Because this has been fixed upstream

--- a/style.css
+++ b/style.css
@@ -65,26 +65,6 @@ h6 a:hover {
   line-height: var(--line-height-s--font-family-tertiary);
 }
 
-/* SEE: ../planet4-master-theme/assets/src/scss/pages/post/_article-content.scss */
-
-@media (min-width: 576px) {
-  .page-content .alignright,
-  .page-content .alignleft {
-    padding-top: 6px;
-    max-width: 100%;
-  }
-
-  .page-content .align-right {
-    float: right;
-    margin: 0 0 8px 8px;
-  }
-
-  .page-content .align-left {
-    float: left;
-    margin: 0 8px 8px 0;
-  }
-}
-
 /* SEE: planet4/plugins/planet4-plugin-gutenberg-blocks/assets/src/styles/blocks/core-overrides/Image.scss */
 
 .wp-block-image.is-style-rounded-180 img {
